<?xml version="1.0"?>
<package format="2">
  <name>catkin_virtualenv_editable_error</name>
  <version>0.0.0</version>
  <description>The catkin_virtualenv_editable_error package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
